backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-python
  namespace: estudos

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-python

  template:
    metadata:
      labels:
        app: backend-python

    spec:
      containers:
        - name: backend-python

          # Essa imagem será criada pela nossa pipeline
          image: ghcr.io/robertcs1507/argocd-lab-backend:edb13b9e3ee6d6f8beec1117df286cc0afb129a8

          ports:
            - containerPort: 5000

          # Configuração que o Python recebe
          # através de variáveis de ambiente
---
apiVersion: v1
kind: Service
metadata:
  name: backend-python
  namespace: estudos

spec:
  selector:
    app: backend-python

  ports:
    - port: 5000
      targetPort: 5000
