app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: estudos

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - app.lab
      secretName: app-lab-tls

  rules:
    - host: app.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-gitops
                port:
                  number: 80
